--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Full-page background */
         body {
-            background-image: url('C:/Users/vinay/OneDrive/Desktop/ba.jpg'); /* Background for the entire page */
+            background-image: url('ba.jpg'); /* Background for the entire page */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -22,7 +22,7 @@
             height: 700px;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-            background-image: url('C:/Users/vinay/OneDrive/Desktop/nn.avif'); /* Background for the card front */
+            background-image: url('nn.avif'); /* Background for the card front */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -96,7 +96,7 @@
         <p>Grand Hall, 123 Celebration Ave, Your City</p>
         
         <!-- QR Code Image -->
-        <img src="C:/Users/vinay/OneDrive/Desktop/qr.jpg" alt="QR Code" class="qr-code">
+        <img src="qr.jpg" alt="QR Code" class="qr-code">
     </div>
 </body>
 </html>
