--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             height: 700px;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-            background-image: url('nn.avif'); /* Background for the card front */
+            background-image: url('nn.jpg'); /* Background for the card front */
             background-size: cover;
             background-position: center;
             display: flex;
