--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <div class="card">
         <h1>You're Invited!</h1>
         <div class="couple-names">
-            <span>Geetha Madhuri</span>
+            <span>Geetha</span>
             <span class="weds">weds</span>
-            <span>Ashish</span>
+            <span>Asish</span>
         </div>
         <p>Join us for a day filled with love, joy, and celebration.</p>
         <p>We would be honored to have you share in our happiness as we begin our journey together.</p>
