--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <p>Join us for a day filled with love, joy, and celebration.</p>
         <p>We would be honored to have you share in our happiness as we begin our journey together.</p>
         <p>Mark your calendars and prepare for a beautiful celebration!</p>
-        <p>December 15, 2024</p>
-        <p>5:00 PM</p>
-        <p>Grand Hall, 123 Celebration Ave, Your City</p>
+        <p>November 26, 2024</p>
+        <p>4:00 PM</p>
+        <p>Mayfair Hotel Gopalpur Odisha</p>
         
         <!-- QR Code Image -->
         <img src="qr.jpg" alt="QR Code" class="qr-code">
